New approach with DocTrees transformation.