@@ -34,8 +34,6 @@ java {
 
 compileJava {
     options.compilerArgs << '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
 }
 
 archivesBaseName = "doclet"
@@ -198,9 +196,7 @@ eclipse {
                         attr = attrs.appendNode('attribute')
                         attr.attributes().put('name', 'add-exports') 
                         attr.attributes().put('value', 
-                            'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED'
-                            + ':jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
-                            + ':jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED')
+                            'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED')
                     }
                 }
             }
